[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.15.4"
tokio = { version = "1.16.0", features = ["full"] }
base64 = "0.13.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
chrono = "0.4.19"
serenity = { version = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
dotenv = "0.15.0"
anyhow = "1.0.53"
clap = { version = "3.0.14", features = ["derive"] }
